# Strix

./: CMakeLists.txt  README.md
demo/: quad_demo.cpp
engine/: CMakeLists.txt
engine/include/: engine.hpp  engine_export.hpp  logger.h  opengl_bind.hpp  platform.hpp  types.hpp
engine/include/strix/: arena.h  logger.h  module.h  platform.h  renderer.h  resource.h  resource_manager.h  strix.h  strix_gl.h
engine/include/strix/math/: mat4.h  vector2.h  vector3.h  vector4.h
engine/include/strix/renderer/: color.h  mesh.h  mesh_data.h  types.h
engine/include/strix/resource/: handle_list.h  resource_manager.h
engine/src/: GameFunctions.cpp  arena.cpp  engine.cpp  logger.cpp  opengl_bind.cpp  renderer.cpp  resource_manager.cpp  strix_gl.cpp
engine/src/math/: mat4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
engine/src/platform/: win64_platform.cpp
engine/src/renderer/: color.cpp  mesh_data.cpp
game/: CMakeLists.txt
game/src/: game.cpp
include/strix/: platform.h  strix.h  strix_arena.h  strix_gl.h  strix_handle.h  strix_logger.h  strix_mesh.h  strix_platform.h  strix_renderer.h  strix_renderer_types.h  strix_resource_manager.h  strix_shader.h  strix_stream_buffer.h  strix_vector3.h
launcher/: CMakeLists.txt
launcher/src/: launcher.cpp
libs/lua/: CMakeLists.txt
libs/sol/: CMakeLists.txt
libs/sol/include/sol/: forward.hpp
old/: CMakeLists copy.txt
old/include/strix/: strix_game.h  strix_gl.h  strix_logger.h  strix_platform.h  strix_shader.h  strix_vector2.h
old/src/: strix_gl_renderer.cpp
old/src/platform/: win64_platform.cpp
src/: strix_arena.cpp  strix_gl.cpp  strix_gl_renderer.cpp  strix_launcher.cpp  strix_logger.cpp  strix_resource_manager.cpp  strix_test.cpp  strix_vector2.cpp  strix_vector3.cpp
src/platform/: win64_platform.cpp
